Fri Dec 22 16:05:56 PST 2017  Basil Gunn <basil@pacabunga.com>

  * Fix version display for wl2ktelnet, wl2kserial & wl2kax25
    Files modified:
      wl2kax25.c
      wl2kax25d.c
      wl2kserial.c
      wl2ktelnet.c

Fri Dec 22 10:50:07 PST 2017  Basil Gunn <basil@pacabunga.com>

    * Separte daemon code used for direct connect from client code.
      File added: wl2kd.c
      Files modified:
        Makefile.am
        wl2k.c
        wl2k.h
        wl2kax25.c
        wl2kax25d.c
        wl2kserial.c
        wl2ktelnet.c

Mon Dec 18 16:23:58 PST 2017  Basil Gunn <basil@pacabunga.com>

    * Add P4 Dragon initialization from BPQ32
      File modified: wl2kserial.c

Mon Dec 18 12:25:54 PST 2017  Basil Gunn <basil@pacabunga.com>

    * Add a build script.
      File added: buildall.sh
      File modified: INSTALL.md

Sun Dec 17 17:02:09 PST 2017  Basil Gunn <basil@pacabunga.com>

    * Bump version number to 0.6
      File modified:  configure.ac

    * Add description of -m for command line modem selection.
      File modified:  doc/wl2kserial.1

    * Fix white space.
      File modified:  wl2k.c

Sun Dec 17 16:32:46 PST 2017  Basil Gunn <basil@pacabunga.com>

    * Fix "pending message/forwarding mail" parsing to handle multiple
      instances in one session.
      File modified: wl2k.c

Thu Nov  2 10:35:21 PDT 2017  Basil Gunn <basil@pacabunga.com>

    * Fix "wl2kxxxx: B2 protocol error 1" pending message parsing bug.
      * B2 parser was expecting "FS" but finds ";PM" instead
      File modified: wl2k.c

Sat Jan 21 15:41:38 PST 2017  Basil Gunn <basil@pacabunga.com>

    * Add support for SCS P4dragon
      Files modified:
        wl2k.conf.dist
        wl2kserial.c

Sun Oct 16 11:31:25 PDT 2016  Basil Gunn <basil@pacabunga.com>

    * Display string of incorrect call sign for mbo.
      File modified: mime2wl.c

    * Return child process status when parent exits.  Enables using
      wl2kax25 in a shell script to detect when wl2kax25 child process